fix desktop padding to align to grid on homepage/article-lists/sidebars, more Filter styling

--- a/web/app/themes/ihc/assets/styles/components/_article-list.scss
+++ b/web/app/themes/ihc/assets/styles/components/_article-list.scss
@@ -147,7 +147,10 @@
     }
 
     .article-content-wrap {
-      padding: 30px 25px 30px 25px;
+      padding: 30px 25px;
+      @include tablet {
+        padding: 30px #{$column-width/2 * 22/5};
+      }
 
       .article-excerpt p {
         color:$dk-blue;
