--- a/web/app/themes/ihc/assets/styles/components/_forms.scss
+++ b/web/app/themes/ihc/assets/styles/components/_forms.scss
@@ -55,7 +55,7 @@ form {
     text-transform: uppercase;
   }
   &::after {
-    height: 26px;
+    height: 16px;
     width: 24px;
     border: none;
     background-color: $white;
