--- a/web/app/themes/ihc/assets/styles/components/_main-sections.scss
+++ b/web/app/themes/ihc/assets/styles/components/_main-sections.scss
@@ -31,6 +31,9 @@ main {
     min-height: 140px;
     .user-content {
       padding: 20px;
+      @include tablet {
+        padding: 20px #{$column-width/2 * 22/15};
+      }
     }
   }
 
@@ -66,7 +69,7 @@ aside.main {
     margin: 0 0 100px;
   }
   p.view-all {
-    margin: 0 25px;
+    margin: 0 #{$column-width/2 * 22/5};
   }
 }
 .with-image aside.main {
@@ -94,10 +97,10 @@ aside.main {
   &.dark {
     background: $dk-blue;
     color: $color-bg;
-    padding: 30px 50px 30px 25px;
+    padding: 30px #{$column-width * 22/5} 30px #{$column-width/2 * 22/5};
     margin: -20px 0 100px;
     @include tablet {
-      margin: 0 -22% 0 0;
+      margin: 0 #{-$column-width * 22/5 - 2%} 0 #{-$column-width/2 * 22/5}; // container element is 5col in 22col grid, extra 2% is for outer margin
     }
     p {
       color: $color-bg;
@@ -149,7 +152,7 @@ aside.page-with-img {
 
   .single-program-sidebar,
   .contacts {
-    padding: 30px 25px 30px 0;
+    padding: 30px #{$column-width/2 * 22/5} 30px 0;
   }
 
   .single-program-sidebar {
