--- a/web/app/themes/ihc/assets/styles/helpers/_typography.scss
+++ b/web/app/themes/ihc/assets/styles/helpers/_typography.scss
@@ -7,7 +7,6 @@ h1, h2, h3, h4, h5 {
 h1 {
   font-weight: 100;
   font-family: $sans;
-  color: $white;
   line-height: 30px;
 }
 
@@ -21,7 +20,6 @@ h3 {
 
 h4 {
   @include font-style1;
-  color: $white;
 }
 
 p {
