--- a/web/app/themes/ihc/assets/styles/pages/_blog.scss
+++ b/web/app/themes/ihc/assets/styles/pages/_blog.scss
@@ -20,22 +20,26 @@
   }
 }
 
-
-
 .filters {
   background: $white;
-  height: 70px;
-  padding: 20px 25px;
+  min-height: 70px;
+  padding: 20px #{$column-width/2 * 22/15};
   margin-bottom: 30px;
 
   .program-topic,
   .focus-area-topic {
     @include font-style1;
-    display: inline-block;
-    margin: 10px 25px 0 0;
+    margin: 10px 0;
+    @include tablet {
+      float: left;
+      width: #{$column-width * 6 * 22/15};
+    }
   }
-
-  .button {
-    float: right;
+  .actions {
+    @include tablet {
+      margin: 0;
+      width: #{$column-width * 3 * 22/15};
+      float: right;
+    }
   }
 }
